# go

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  CMakePresets.json  Node.cpp  Node.h  README.md  main.cpp
src/: .gitignore  main.cpp
src/file/: File_manager.cpp  File_manager.h
src/file/data/: current.sgf  sample.sgf  sample2.sgf
src/logic/: Board.cpp  Board.h  Node.cpp  Node.h
src/ui/: Sdl_renderer.cpp  Sdl_renderer.h
test/: go_game  main.cpp
